--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 async-trait = "0.1.48"
 compress-tools = "0.11.1"
+dirs = "3.0.1"
 fs_extra = "1.2.0"
 glib = "0.10.3"
 reqwest = {version = "0.11.2", features = ["cookies", "json"] }
